--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -5,7 +5,7 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
   kafka:
-    image: confluentinc/cp-kafka:7.6.0
+    image: confluentinc/cp-kafka:7.6.1
     depends_on:
       - zookeeper
     ports:
@@ -24,8 +24,13 @@ services:
       KAFKA_NUM_PARTITIONS: 6
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   schema-registry:
-    image: confluentinc/cp-schema-registry:7.6.0
+    image: confluentinc/cp-schema-registry:7.6.1
     depends_on: [kafka]
     ports: ["8081:8081"]
     environment:
@@ -56,9 +61,10 @@ services:
       CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "false"
-      CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/confluent-hub-components
+      CONNECT_PLUGIN_PATH: /usr/share/java,/usr/share/confluent-hub-components,/usr/share/java/aiven-s3
       CONNECT_HEAP: "-Xms512M -Xmx512M"
       CONNECT_LOG4J_LOGGERS: org.reflections=ERROR
+      KAFKA_HEAP_OPTS: "-Xms1G -Xmx5G"  
   minio:
     image: minio/minio:RELEASE.2024-06-13T22-53-53Z
     command: server /data --console-address ":9001"
@@ -78,11 +84,13 @@ services:
       context: ./services/producer
     image: fraud/producer:dev
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     environment:
       KAFKA_BOOTSTRAP: kafka:9092          # internal listener
       TARGET_TPS: "1000"                    # raise target now
       RNG_SEED: "42"
+      PYTHONUNBUFFERED: "1"
     expose:
       - "8001"                               # metrics port (internal)
     # (Optional) map port if you want to curl metrics from host:
